# Travel-Notifs

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
deploy/: Caddyfile
docs/plans/: 2026-07-11-google-routes-provider-design.md
scripts/: check_google_provider.py  check_telegram_bot.py
src/travel_notifs/: __init__.py  agencies.py  alerts.py  config.py  domain.py  notifications.py  planning.py  storage.py  web.py  worker.py
src/travel_notifs/static/: app.css  app.js
src/travel_notifs/templates/: _trip_rows.html  dashboard.html  join.html
tests/: test_agencies.py  test_alerts.py  test_config.py  test_google_planning.py  test_notifications.py  test_storage.py  test_web.py  test_worker.py
